# Jobhatch4AI

./: .gitattributes  .gitignore  LICENSE  README.md  flake.nix  justfile  pyproject.toml  uv-cpu.toml  uv-gpu.toml
data/: 上市公司招聘数据2026.csv
docs/: 实验指南.md  开发文档.md  测试文档.md
src/backend/: main.py
src/backend/app/: config.py
src/backend/app/models/: schemas.py
src/backend/app/routers/: auth.py  chat.py  data.py
src/backend/app/services/: auth.py  classifier.py  clustering.py  database.py  embedding.py  llm.py  pipeline.py  preprocess.py  rag.py  recommender.py  tsne_viz.py  vector_search.py
src/backend/data/: users.json
src/backend/tests/: conftest.py  test_api.py  test_auth.py  test_classifier.py  test_embedding.py  test_embedding_classifier.py  test_pipeline.py  test_preprocess.py  test_rag.py  test_recommender.py  test_tsne.py  test_vector_search.py
src/frontend/: biome.json  index.html  package.json  vite.config.ts
src/frontend/src/: main.ts
src/frontend/src/api/: index.ts
src/frontend/src/views/: Chat.vue  Dashboard.vue  Login.vue
