[project]
name = "jobhatch4ai"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "openai>=1.0",
    "pytest",
    "httpx",
    "jieba",
    "numpy",
    "pandas",
    "scikit-learn",
    "python-multipart",
    "python-dotenv",
    "sentence-transformers",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
